src/model/game/tests/game_1/snapshots/cli_chess__model__game__tests__game_1__1w.snap
---
source: src/model/game/tests/game_1/mod.rs
expression: game.get_board_representation()

---
[
    " r n b q k b n r",
    " p p p p p p p p",
    " - - - - - - - -",
    " - - - - - - - -",
    " - - - - P - - -",
    " - - - - - - - -",
    " P P P P - P P P",
    " R N B Q K B N R",
]
